--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "axios": "^1.12.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
@@ -18,6 +19,5 @@
     "nodemailer": "^7.0.6",
     "stripe": "^18.5.0"
   },
-  "devDependencies": {},
   "description": ""
 }
